fix: styling on mobile

--- a/pages/globals.css
+++ b/pages/globals.css
@@ -75,6 +75,10 @@ ol {
     @apply text-white rounded-xl bg-brand-700 border-2 border-brand-700 font-semibold;
   }
 
+  .btn-cta {
+    @apply bg-secondary rounded-lg text-brand border-brand hover:bg-secondary-800 py-2 h-fit whitespace-nowrap;
+  }
+
   .btn-secondary {
     @apply text-brand-800 font-semibold rounded-xl border-2 border-brand-700 bg-transparent;
   }
